# umlaut

./: .gitignore  CHANGES.md  README.md  SKILL.md  evolution-ui.service  install.sh  main.py  pyproject.toml  requirements.txt  skill.json  start.sh  stop.sh  umlaut.service
scripts/: install.sh  run-evolution.sh
static/: app.js  index.html  style.css
